# alectryon

./: .gitattributes  .gitconfig  .gitignore  CHANGES.rst  CITATION.bib  CITATION.cff  LICENSE  Makefile  README.rst  __init__.py  alectryon-slideshow.js  alectryon.css  alectryon.py  coqrst2html.py  pyproject.toml  rstcoq2html.py  run_vscoq.py  setup.cfg  setup.py
.github/actions/test-alectryon/: action.yml
.github/workflows/: ci.yml  pypi.yml
alectryon/: __init__.py  __main__.py  cli.py  coq.py  coqc_time.py  coqlsp.py  core.py  dafny.py  docutils.py  easycrypt.py  elpi_lexer.py  html.py  json.py  latex.py  lean3.py  lean4.py  literate.py  lsp.py  lspFinal.py  markers.py  minimal.py  myst.py  noop.py  ppstring.py  pygments.py  pygments_lexer.py  pygments_style.py  serapi.py  sexp.py  sphinx.py  tokens.py  transforms.py  typst.py  vscoq.py  vscoqFinal.py  vsrocq.py
alectryon/assets/: alectryon.css  alectryon.sty  alectryon.typ  docutils_basic.css  tango_subtle.min.css
assets/: alectryon.css  alectryon.js  alectryon.sty  docutils_basic.css  tango_subtle.css  tango_subtle.min.css  tango_subtle.sty
etc/: cache_textconv.py  docker.sh  dumptables.py  gitconfig  lint_changes.py  lint_changes.sh  regen_makefile.py  regen_tango_subtle_css.py  test-elisp.sh  test.sh  test_package.sh
etc/elisp/: .gitignore  Cask  alectryon-tests.el  alectryon.el
etc/elisp/screenshot/: capture.el  example.v
etc/pixel-diffs/: .gitignore  diff.sh  package-lock.json  package.json  render.mjs  screenshot.mjs  screenshot.sh
etc/tests/: elisp.sh  main.sh
etc/vm/: provision.sh
recipes/: .gitignore  Makefile  _RocqProject  alectryon_custom_driver.py  api.py  api.rst  caching.v  coq.html  coq.tex  coq_drivers.v  coqc_time.v  coqdoc.v  custom_driver.py  custom_highlighting.v  custom_stylesheet.css  custom_stylesheet.docutils.conf  custom_stylesheet.rst  display_flags.rst  document.v.rst  docutils.conf  driver.py  fragments.json  fragments.v.json  hyps.rst  latex.v  lean3-tutorial.rst  lean4-tactics-myst.md  lean4-tactics.md  lean4-tactics.rst  lists.lean  lists_ugly.lean  literate.v  literate_HTML.html  literate_LaTeX.tex  literate_MyST.md  literate_coq.v  literate_easycrypt.ec.rst  literate_lean3.lean  literate_lean4.lean  literate_reST.docutils.conf  (+17 more)
recipes/_output/: .version-info  api.out  api.rst.out  caching.html  caching.v.cache.xz  caching.v.io.json  coq.annotated.html  coq.annotated.tex  coq_drivers.coqc.html  coq_drivers.html  coq_drivers.noexec.html  coqc_time.html  coqdoc.html  custom_driver.out  custom_highlighting.html  custom_highlighting.with_driver.html  custom_stylesheet.html  display_flags.html  fragments.io.json  fragments.snippets.html  fragments.snippets.tex  fragments.v.io.json  lean3-tutorial.html  lean3-tutorial.lean  lean3-tutorial.lean3  lean4-tactics-myst.html  lean4-tactics.html  lean4-tactics.lean  literate_HTML.annotated.html  literate_LaTeX.annotated.tex  literate_MyST.html  literate_MyST.v  literate_coq.5.html  literate_coq.html  literate_coq.lua.tex  literate_coq.min.rst  literate_coq.min.stdin.rst  literate_coq.tex  literate_coq.v.rst  literate_coq.xe.tex  (+34 more)
recipes/_output/tests/: alternative_clis.out  auto_toggle.html  body_only.html  body_only.tex  cache_v1.html  cache_v2.html  cached.html  comments_in_definition.html  comments_in_definition.v.rst  coqc_time_error.html  coqc_time_error.out  corner_cases.html  corner_cases.lean.html  corner_cases.lean3.html  corner_cases.xe.tex  dialects.4.html  dialects.5.html  dialects.lua.tex  dialects.tex  dialects.xe.tex  directive-options.html  directive-options.xe.tex  display-flags.html  doctests.out  end_to_end.py.out  errors.lint.json  errors.py.out  errors.sh.out  errors.txt  exact_latex.annotated.tex  exact_typst.alectryon.json  excepthook.v.out  fatal.v.out  fatal_transform.v.out  frontend_warnings.json.out  goal-name.html  goal-name.xe.tex  goal_names.v.html  latex_formatting.tex  lean3_error.out  (+31 more)
recipes/backstop/: .gitignore  Makefile  backstop.config.js  backstop.sh  package-lock.json  package.json  pdfjs.html  screenshot.js
recipes/backstop/backstop_data/engine_scripts/puppet/: clickAndHoverHelper.js  onReady.js
recipes/output/: .version-info  api.out  coqdoc.html  coqdoc.v.cache  coqdoc.v.cache.xz  coqdoc.v.html  custom_highlighting.html  document.html  document.minimal.html  document.tex  document.v  fragments.io.json  fragments.snippets.html  fragments.snippets.tex  hyps.html  hyps.tex  latex.snippets.tex  lean3-tutorial.html  literate.html  literate.v.html  literate.v.rst  mathjax.html  minification.html  minification.rst.cache.xz  plain.lean.html  plain.v.html
recipes/sphinx/: .gitignore  Makefile  MyST.md  conf.py  coqchapter.v  coqchapter.v.cache  corner_cases.rst  included.md  included.rst  index.rst  index.rst.cache  literate1_rst.v  literate2_md.v  math.rst  math.rst.cache
recipes/sphinx/_build/alectryon/: MyST.md.cache  coqchapter.v.cache  corner_cases.rst.cache  index.rst.cache  literate1_rst.v.cache  math.rst.cache
recipes/sphinx/_build/html/: MyST.html  coqchapter.html  corner_cases.html  index.html  literate1.html  literate2.html  math.html
recipes/sphinx/_build/latex/: alectryon-demo.tex
recipes/sphinx/_static/: mathjax_config.js
recipes/src/: imported.v
recipes/tests/: alternative_clis.py  auto_toggle.rst  body_only.rst  cache_v1.v  cache_v1.v.cache  cache_v2.v  cache_v2.v.cache  cached.v  cli_flags.rst  comments_in_definition.v  coqc_time_error.rst  corner_cases.lean  corner_cases.lean3  corner_cases.rst  dialects.rst  directive-options.rst  display-flags.rst  docinfo_flags.rst  doctests.py  end_to_end.py  errors.py  errors.rst  errors.sh  exact_latex.tex  exact_typst.typ  excepthook.v  fatal.v  fatal_transform.v  frontend_warnings.json  geometry.docutils.conf  goal-name.v  goal_names.v  included.typ  latex_formatting.v  lean3_error.rst  linter.v  linums.rst  linums.rst.v  lists.lean  lists.lean3  (+19 more)
recipes/tests/sitecustomize/: sitecustomize.py
