[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pyright]
include = ["alectryon"]
reportOptionalMemberAccess = false
reportWildcardImportFromLibrary = false

[tool.mypy]
ignore_missing_imports = true

[tool.coverage.run]
# branch = True

[tool.coverage.report]
  exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "assert False",
    "raise AssertionError",
    "raise NotImplementedError",
    "raise UnexpectedError",
  ]