[metadata]
name = alectryon
version = attr: alectryon.__init__.__version__
description = A library to process Coq snippets embedded in documents, showing goals and messages for each Coq sentence.
long_description = file: README.rst
url = https://github.com/cpitclaudel/alectryon
long_description_content_type = text/x-rst
author = Clément Pit-Claudel
author_email = clement.pitclaudel@live.com
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Software Development :: Compilers
    Topic :: Text Editors :: Documentation
    Topic :: Text Processing :: Markup :: reStructuredText

[options]
packages = alectryon
python_requires = >=3.6
install_requires =
    pygments
    dominate
    beautifulsoup4
    docutils

[options.extras_require]
md = myst_parser
sphinx = sphinx
full = myst_parser; sphinx

[options.entry_points]
console_scripts =
    alectryon=alectryon.cli:main
    # rstcoq2html=alectryon.cli:rstcoq2html
    # coqrst2html=alectryon.cli:coqrst2html
    # rstcoq2latex=alectryon.cli:rstcoq2latex
    # coqrst2latex=alectryon.cli:coqrst2latex

pygments.styles =
    alectryon = alectryon.pygments_style:AlectryonStyle

[options.package_data]
* =
    assets/*

[yapf]
based_on_style = pep8
blank_lines_around_top_level_definition = 1
blank_line_before_module_docstring = True

[pylint]
disable =
    bad-continuation,
    docstring-first-line-empty,
    duplicate-code,
    fixme,
    import-outside-toplevel,
    invalid-name,
    missing-class-docstring,
    missing-function-docstring,
    missing-module-docstring,
    missing-returns-doc,
    multiple-statements,
    protected-access,
    too-few-public-methods,
    too-many-ancestors,
    too-many-arguments,
    too-many-branches,
    too-many-instance-attributes,
    too-many-lines,
    too-many-locals,
    too-many-nested-blocks,
    too-many-public-methods,
    too-many-return-statements,
    too-many-statements,
    wrong-import-position
